--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ---
 layout: default
 ---
-<p>文章列表</p>
+<div class="topicList">文章列表</div>
 <ul>
 　　{% for post in site.posts %}
-　　　　<li>{{ post.date | date_to_string }} <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
+　　　　<li>{{ post.date | date_to_string }} <a class="topicTitle" href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
 　　{% endfor %}
 </ul>
